# longterm-goals

./: .gitignore  LICENSE  README.md  index.html  package.json  tailwind.config.js  vite.config.js
.github/workflows/: build-windows.yml
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/assets/: main.css
src/stores/: goalStore.js
